# ai-service

./: README.md
backend/: .gitignore  Makefile  main.py  prompts.py  pyproject.toml  rag_service.py  requirements.txt
backend/backend/: .env  main.py  rag_service.py
backend/backend/docs/: sample.txt
backend/docs/: sample.txt
frontend/: .gitignore  package-lock.json  package.json  vue.config.js
frontend/frontend/: package.json
frontend/frontend/src/components/: ChatBox.vue
frontend/src/: App.vue
frontend/src/components/: ChatBox.vue  rooms.js
